# WahlBit

./: CMakeLists.txt  README.md  WahlBit.cpp  WahlBit.h  main.cpp
WahlBit/: CMakeLists.txt  WahlBit.cpp  WahlBit.h  main.cpp
